# WasmEdge

./: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/string_test/: CMakeLists.txt  README.md  stringtest.cpp
plugins/string_test/rust/: Cargo.toml  out.wasm
plugins/string_test/rust/src/: main.rs
plugins/wasi_ocr/: wasiocrenv.cpp  wasiocrfunc.h
